# CLI_Notes_System

./: CMakeLists.txt  README.md
include/: CheckboxContent.h  Content.h  FileAttatchmentContent.h  Note.h  Notes.h  Storage.h  TextContent.h  User.h
src/main/: CheckboxContent.cpp  Note.cpp  Notes.cpp  Storage.cpp  TextContent.cpp  User.cpp  main.cpp
